fix bug media query and jump btn

--- a/components/FAQ/FAQItem/FAQItem.module.css
+++ b/components/FAQ/FAQItem/FAQItem.module.css
@@ -86,11 +86,13 @@
   }
 }
 
-.question {
-  @media (max-width: 1270px) {
-    width: 300px;
+  @media (max-width: 1000px) {
+    .question {
+    max-width: 300px;
   }
+}
   @media (max-width: 485px) {
-    width: 200px;
+    .question {
+    max-width: 200px;
   }
 }
